--- a/Report/HtmlReportTemplate.html
+++ b/Report/HtmlReportTemplate.html
@@ -10,7 +10,31 @@
 
 <body>
 	<div id="summary"></div>
-	<div id="columns"></div>
+	<div id="columns">
+		<div class="column">
+			<div class="header">
+				<div class="title">Tests</div>
+				<div class="info">1 Card</div>
+			</div>
+			<div class="card">
+				<div class="header">
+					<div class="title">Test Card</div>
+					<div class="info">
+						📅
+						<span class="date">2023-01-31</span>
+						<br>
+						✏️
+						<span class="date moddate">2023-02-14</span>
+						<br>
+						⏰
+						<span class="date duedate">2023-03-05</span>
+					</div>
+				</div>
+				<div class="text">With some text</div>
+				<div class="link">https://github.com/sgrottel/MyToDoBoard</div>
+			</div>
+
+	</div>
 </body>
 
 </html>
