--- a/Report/HtmlReportTemplate.html
+++ b/Report/HtmlReportTemplate.html
@@ -714,7 +714,7 @@ function cardClick(event)
 			}
 			else
 			{
-				detailedCard.getElementsByClassName("info")[0].innerHTML = "No Title";
+				detailedCard.getElementsByClassName("info")[0].innerHTML = "";
 			}
 		}
 		else if (child.classList.contains("link"))
