--- a/Report/HtmlReportTemplate.html
+++ b/Report/HtmlReportTemplate.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>mytodo.yaml Report</title>
+	<title>mytodo Report</title>
 	<link rel="stylesheet" href="./HtmlReportStyle.css">
 	<link rel="icon" type="image/x-icon" href="data:image/x-icon;base64,
 AAABAAYAAAAAAAEAIADSDQAAZgAAAEBAAAABACAAKEIAADgOAAAwMAAAAQAgAKglAABgUAAAICAA
